--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
   },
   "author": "Shikhar Sharma",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@vercel/node": "^5.1.15",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
